[gd_scene load_steps=19 format=2]

[ext_resource path="res://scenes/enviroment/BasicTilemap.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/NPC.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://dialogue/DialoguePlayer.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/enviroment/Stairs.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/enviroment/Board.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/enviroment/Statue.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/enemies/OrcBasic.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/enviroment/enemies/EnemyCollision.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/levels/Level3.gd" type="Script" id=10]
[ext_resource path="res://scenes/UI/TutorialBox.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/levels/Level4.tscn" type="PackedScene" id=12]
[ext_resource path="res://scenes/enviroment/Skull.tscn" type="PackedScene" id=13]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 40, -8, 0, 0, 0, 0, -32, -8, 0, 0, 0, 0, -64, -48 )
}

[sub_resource type="Animation" id=2]
resource_name = "LightShake"
tracks/0/type = "value"
tracks/0/path = NodePath("StatueEffect/Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}

[sub_resource type="Animation" id=3]
resource_name = "Shake"

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0 )
colors = PoolColorArray( 0.737255, 0.737255, 0.737255, 0.533333 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 4 )

[node name="Level3" type="Node2D"]
script = ExtResource( 10 )

[node name="BasicTilemap" parent="." instance=ExtResource( 1 )]
tile_data = PoolIntArray( -1245143, 0, 0, -1245142, 0, 1, -1245141, 0, 1, -1245140, 0, 2, -1179608, 0, 0, -1179607, 0, 65541, -1179606, 0, 65537, -1179605, 0, 65537, -1179604, 0, 65538, -1114082, 0, 0, -1114081, 0, 1, -1114080, 0, 1, -1114079, 0, 1, -1114078, 0, 1, -1114077, 0, 1, -1114076, 0, 1, -1114075, 0, 1, -1114074, 0, 1, -1114073, 0, 1, -1114072, 0, 65541, -1114071, 0, 65537, -1114070, 0, 65537, -1114069, 0, 65537, -1114068, 0, 65538, -1048546, 0, 65536, -1048545, 0, 65537, -1048544, 0, 65537, -1048543, 0, 65537, -1048542, 0, 65537, -1048541, 0, 65537, -1048540, 0, 65537, -1048539, 0, 196618, -1048538, 0, 65537, -1048537, 0, 65537, -1048536, 0, 262154, -1048535, 0, 65537, -1048534, 0, 65537, -1048533, 0, 65537, -1048532, 0, 65538, -983010, 0, 65536, -983009, 0, 65537, -983008, 0, 65537, -983007, 0, 4, -983006, 0, 131073, -983005, 0, 131073, -983004, 0, 131073, -983003, 0, 131073, -983002, 0, 131073, -983001, 0, 131073, -983000, 0, 131073, -982999, 0, 131073, -982998, 0, 131073, -982997, 0, 131073, -982996, 0, 131074, -917474, 0, 65536, -917473, 0, 65537, -917472, 0, 65537, -917471, 0, 65538, -851952, 0, 0, -851951, 0, 1, -851950, 0, 1, -851949, 0, 1, -851948, 0, 1, -851947, 0, 1, -851946, 0, 1, -851945, 0, 1, -851944, 0, 1, -851943, 0, 1, -851942, 0, 1, -851941, 0, 1, -851940, 0, 1, -851939, 0, 1, -851938, 0, 65541, -851937, 0, 65537, -851936, 0, 65537, -851935, 0, 65540, -851934, 0, 1, -851933, 0, 1, -851932, 0, 1, -851931, 0, 1, -851930, 0, 1, -851929, 0, 2, -786416, 0, 65536, -786415, 0, 65537, -786414, 0, 65537, -786413, 0, 65537, -786412, 0, 65537, -786411, 0, 65537, -786410, 0, 65537, -786409, 0, 65537, -786408, 0, 65537, -786407, 0, 65537, -786406, 0, 65537, -786405, 0, 65537, -786404, 0, 65537, -786403, 0, 65537, -786402, 0, 65537, -786401, 0, 65537, -786400, 0, 262154, -786399, 0, 65537, -786398, 0, 65537, -786397, 0, 65537, -786396, 0, 65537, -786395, 0, 65537, -786394, 0, 196618, -786393, 0, 65538, -720880, 0, 65536, -720879, 0, 65537, -720878, 0, 65537, -720877, 0, 65537, -720876, 0, 65537, -720875, 0, 65537, -720874, 0, 262154, -720873, 0, 65537, -720872, 0, 65537, -720871, 0, 65537, -720870, 0, 65537, -720869, 0, 65537, -720868, 0, 65537, -720867, 0, 65537, -720866, 0, 65537, -720865, 0, 65537, -720864, 0, 65537, -720863, 0, 65537, -720862, 0, 65537, -720861, 0, 65537, -720860, 0, 65537, -720859, 0, 65537, -720858, 0, 65537, -720857, 0, 65538, -655344, 0, 131072, -655343, 0, 131073, -655342, 0, 131073, -655341, 0, 131073, -655340, 0, 131073, -655339, 0, 131073, -655338, 0, 131073, -655337, 0, 5, -655336, 0, 65537, -655335, 0, 65537, -655334, 0, 4, -655333, 0, 131073, -655332, 0, 131073, -655331, 0, 131073, -655330, 0, 5, -655329, 0, 65537, -655328, 0, 65537, -655327, 0, 4, -655326, 0, 131073, -655325, 0, 131073, -655324, 0, 131073, -655323, 0, 131073, -655322, 0, 131073, -655321, 0, 131074, -589801, 0, 65536, -589800, 0, 65537, -589799, 0, 65537, -589798, 0, 65538, -589794, 0, 65536, -589793, 0, 65537, -589792, 0, 65537, -589791, 0, 65538, -524265, 0, 65536, -524264, 0, 65537, -524263, 0, 65537, -524262, 0, 65538, -524258, 0, 65536, -524257, 0, 65537, -524256, 0, 65537, -524255, 0, 65538, -458729, 0, 65536, -458728, 0, 65537, -458727, 0, 65537, -458726, 0, 65538, -458722, 0, 65536, -458721, 0, 65537, -458720, 0, 65537, -458719, 0, 65538, -393206, 0, 0, -393205, 0, 1, -393204, 0, 1, -393203, 0, 1, -393202, 0, 1, -393201, 0, 1, -393200, 0, 1, -393199, 0, 1, -393198, 0, 1, -393197, 0, 1, -393196, 0, 1, -393195, 0, 1, -393194, 0, 1, -393193, 0, 65541, -393192, 0, 65537, -393191, 0, 65537, -393190, 0, 65538, -393186, 0, 65536, -393185, 0, 65537, -393184, 0, 65537, -393183, 0, 65538, -327670, 0, 65536, -327669, 0, 65537, -327668, 0, 262154, -327667, 0, 65537, -327666, 0, 65537, -327665, 0, 65537, -327664, 0, 65537, -327663, 0, 65537, -327662, 0, 65537, -327661, 0, 65537, -327660, 0, 65537, -327659, 0, 65537, -327658, 0, 65537, -327657, 0, 65537, -327656, 0, 65537, -327655, 0, 65537, -327654, 0, 65538, -327650, 0, 65536, -327649, 0, 65537, -327648, 0, 65537, -327647, 0, 65538, -262134, 0, 65536, -262133, 0, 65537, -262132, 0, 65537, -262131, 0, 65537, -262130, 0, 65537, -262129, 0, 65537, -262128, 0, 65537, -262127, 0, 65537, -262126, 0, 65537, -262125, 0, 65537, -262124, 0, 65537, -262123, 0, 65537, -262122, 0, 65537, -262121, 0, 65537, -262120, 0, 65537, -262119, 0, 65537, -262118, 0, 65538, -262114, 0, 65536, -262113, 0, 196618, -262112, 0, 65537, -262111, 0, 65538, -196598, 0, 65536, -196597, 0, 65537, -196596, 0, 4, -196595, 0, 131073, -196594, 0, 131073, -196593, 0, 131073, -196592, 0, 131073, -196591, 0, 131073, -196590, 0, 131073, -196589, 0, 131073, -196588, 0, 131073, -196587, 0, 131073, -196586, 0, 131073, -196585, 0, 131073, -196584, 0, 131073, -196583, 0, 131073, -196582, 0, 131074, -196578, 0, 65536, -196577, 0, 65537, -196576, 0, 65537, -196575, 0, 65538, -131062, 0, 65536, -131061, 0, 65537, -131060, 0, 65538, -131042, 0, 65536, -131041, 0, 196618, -131040, 0, 65537, -131039, 0, 65538, -65536, 0, 0, -65535, 0, 1, -65534, 0, 1, -65533, 0, 1, -65532, 0, 1, -65531, 0, 1, -65530, 0, 1, -65529, 0, 1, -65528, 0, 1, -65527, 0, 1, -65526, 0, 65541, -65525, 0, 65537, -65524, 0, 65540, -65523, 0, 1, -65522, 0, 1, -65521, 0, 1, -65520, 0, 1, -65519, 0, 2, -65506, 0, 65536, -65505, 0, 65537, -65504, 0, 65537, -65503, 0, 65538, 65529, 0, 0, 65530, 0, 1, 65531, 0, 1, 65532, 0, 1, 65533, 0, 2, 0, 0, 65536, 1, 0, 65537, 2, 0, 65537, 3, 0, 65537, 4, 0, 65537, 5, 0, 65537, 6, 0, 65537, 7, 0, 65537, 8, 0, 65537, 9, 0, 65537, 10, 0, 65537, 11, 0, 65537, 12, 0, 196618, 13, 0, 65537, 14, 0, 65537, 15, 0, 65537, 16, 0, 65537, 17, 0, 65538, 30, 0, 65536, 31, 0, 65537, 32, 0, 65537, 33, 0, 65538, 131065, 0, 65536, 131066, 0, 65537, 131067, 0, 65537, 131068, 0, 65537, 131069, 0, 65538, 65536, 0, 65536, 65537, 0, 65537, 65538, 0, 65537, 65539, 0, 4, 65540, 0, 131073, 65541, 0, 5, 65542, 0, 65537, 65543, 0, 65537, 65544, 0, 4, 65545, 0, 131073, 65546, 0, 5, 65547, 0, 65537, 65548, 0, 65537, 65549, 0, 4, 65550, 0, 131073, 65551, 0, 5, 65552, 0, 65537, 65553, 0, 65538, 65566, 0, 65536, 65567, 0, 65537, 65568, 0, 65537, 65569, 0, 65538, 196601, 0, 65536, 196602, 0, 65537, 196603, 0, 65537, 196604, 0, 65537, 196605, 0, 65538, 131072, 0, 65536, 131073, 0, 65537, 131074, 0, 65537, 131075, 0, 65538, 131077, 0, 65536, 131078, 0, 65537, 131079, 0, 65537, 131080, 0, 65538, 131082, 0, 65536, 131083, 0, 262154, 131084, 0, 65537, 131085, 0, 65538, 131087, 0, 65536, 131088, 0, 65537, 131089, 0, 65538, 131102, 0, 65536, 131103, 0, 65537, 131104, 0, 65537, 131105, 0, 65538, 262137, 0, 65536, 262138, 0, 65537, 262139, 0, 65537, 262140, 0, 65537, 262141, 0, 65538, 196608, 0, 65536, 196609, 0, 65537, 196610, 0, 65537, 196611, 0, 65540, 196612, 0, 1, 196613, 0, 65541, 196614, 0, 65537, 196615, 0, 65537, 196616, 0, 65540, 196617, 0, 1, 196618, 0, 65541, 196619, 0, 196618, 196620, 0, 65537, 196621, 0, 65540, 196622, 0, 1, 196623, 0, 65541, 196624, 0, 65537, 196625, 0, 65538, 196638, 0, 65536, 196639, 0, 65537, 196640, 0, 65537, 196641, 0, 65538, 327673, 0, 65536, 327674, 0, 65537, 327675, 0, 262154, 327676, 0, 65537, 327677, 0, 65540, 327678, 0, 1, 327679, 0, 1, 262144, 0, 65541, 262145, 0, 65537, 262146, 0, 65537, 262147, 0, 65537, 262148, 0, 65537, 262149, 0, 65537, 262150, 0, 65537, 262151, 0, 65537, 262152, 0, 65537, 262153, 0, 65537, 262154, 0, 65537, 262155, 0, 65537, 262156, 0, 65537, 262157, 0, 65537, 262158, 0, 65537, 262159, 0, 65537, 262160, 0, 65537, 262161, 0, 65538, 262174, 0, 65536, 262175, 0, 65537, 262176, 0, 65537, 262177, 0, 65538, 393209, 0, 65536, 393210, 0, 65537, 393211, 0, 65537, 393212, 0, 65537, 393213, 0, 65537, 393214, 0, 65537, 393215, 0, 262154, 327680, 0, 65537, 327681, 0, 65537, 327682, 0, 65537, 327683, 0, 4, 327684, 0, 131073, 327685, 0, 5, 327686, 0, 65537, 327687, 0, 65537, 327688, 0, 4, 327689, 0, 131073, 327690, 0, 5, 327691, 0, 65537, 327692, 0, 65537, 327693, 0, 4, 327694, 0, 131073, 327695, 0, 5, 327696, 0, 65537, 327697, 0, 65540, 327698, 0, 1, 327699, 0, 1, 327700, 0, 1, 327701, 0, 1, 327702, 0, 1, 327703, 0, 1, 327704, 0, 1, 327705, 0, 1, 327706, 0, 1, 327707, 0, 1, 327708, 0, 1, 327709, 0, 1, 327710, 0, 65541, 327711, 0, 65537, 327712, 0, 65537, 327713, 0, 65538, 458745, 0, 131072, 458746, 0, 131073, 458747, 0, 131073, 458748, 0, 131073, 458749, 0, 131073, 458750, 0, 131073, 458751, 0, 131073, 393216, 0, 5, 393217, 0, 65537, 393218, 0, 65537, 393219, 0, 65538, 393221, 0, 65536, 393222, 0, 65537, 393223, 0, 65537, 393224, 0, 65538, 393226, 0, 65536, 393227, 0, 65537, 393228, 0, 65537, 393229, 0, 65538, 393231, 0, 65536, 393232, 0, 65537, 393233, 0, 65537, 393234, 0, 65537, 393235, 0, 65537, 393236, 0, 65537, 393237, 0, 65537, 393238, 0, 65537, 393239, 0, 65537, 393240, 0, 65537, 393241, 0, 65537, 393242, 0, 65537, 393243, 0, 65537, 393244, 0, 65537, 393245, 0, 65537, 393246, 0, 65537, 393247, 0, 65537, 393248, 0, 65537, 393249, 0, 65538, 458752, 0, 65536, 458753, 0, 65537, 458754, 0, 65537, 458755, 0, 65540, 458756, 0, 1, 458757, 0, 65541, 458758, 0, 65537, 458759, 0, 65537, 458760, 0, 65540, 458761, 0, 1, 458762, 0, 65541, 458763, 0, 65537, 458764, 0, 65537, 458765, 0, 65540, 458766, 0, 1, 458767, 0, 65541, 458768, 0, 65537, 458769, 0, 65537, 458770, 0, 4, 458771, 0, 131073, 458772, 0, 131073, 458773, 0, 131073, 458774, 0, 131073, 458775, 0, 131073, 458776, 0, 131073, 458777, 0, 131073, 458778, 0, 131073, 458779, 0, 131073, 458780, 0, 131073, 458781, 0, 131073, 458782, 0, 131073, 458783, 0, 131073, 458784, 0, 131073, 458785, 0, 131074, 524288, 0, 65536, 524289, 0, 65537, 524290, 0, 65537, 524291, 0, 65537, 524292, 0, 65537, 524293, 0, 65537, 524294, 0, 65537, 524295, 0, 262154, 524296, 0, 65537, 524297, 0, 65537, 524298, 0, 65537, 524299, 0, 65537, 524300, 0, 65537, 524301, 0, 65537, 524302, 0, 65537, 524303, 0, 65537, 524304, 0, 65537, 524305, 0, 65537, 524306, 0, 65538, 589824, 0, 131072, 589825, 0, 131073, 589826, 0, 131073, 589827, 0, 131073, 589828, 0, 131073, 589829, 0, 131073, 589830, 0, 131073, 589831, 0, 131073, 589832, 0, 131073, 589833, 0, 131073, 589834, 0, 5, 589835, 0, 65537, 589836, 0, 4, 589837, 0, 131073, 589838, 0, 131073, 589839, 0, 131073, 589840, 0, 131073, 589841, 0, 131073, 589842, 0, 131074, 655370, 0, 65536, 655371, 0, 65537, 655372, 0, 65538, 720896, 0, 0, 720897, 0, 1, 720898, 0, 1, 720899, 0, 1, 720900, 0, 1, 720901, 0, 1, 720902, 0, 1, 720903, 0, 1, 720904, 0, 1, 720905, 0, 1, 720906, 0, 65541, 720907, 0, 65537, 720908, 0, 65540, 720909, 0, 1, 720910, 0, 1, 720911, 0, 1, 720912, 0, 1, 720913, 0, 1, 720914, 0, 2, 786432, 0, 65536, 786433, 0, 65537, 786434, 0, 65537, 786435, 0, 65537, 786436, 0, 65537, 786437, 0, 65537, 786438, 0, 65537, 786439, 0, 65537, 786440, 0, 65537, 786441, 0, 65537, 786442, 0, 65537, 786443, 0, 65537, 786444, 0, 65537, 786445, 0, 65537, 786446, 0, 65537, 786447, 0, 65537, 786448, 0, 65537, 786449, 0, 65537, 786450, 0, 65538, 851968, 0, 65536, 851969, 0, 65537, 851970, 0, 65537, 851971, 0, 65537, 851972, 0, 65537, 851973, 0, 196618, 851974, 0, 65537, 851975, 0, 65537, 851976, 0, 65537, 851977, 0, 65537, 851978, 0, 65537, 851979, 0, 65537, 851980, 0, 65537, 851981, 0, 65537, 851982, 0, 65537, 851983, 0, 65537, 851984, 0, 65537, 851985, 0, 196618, 851986, 0, 65538, 917504, 0, 131072, 917505, 0, 131073, 917506, 0, 131073, 917507, 0, 131073, 917508, 0, 131073, 917509, 0, 131073, 917510, 0, 131073, 917511, 0, 131073, 917512, 0, 131073, 917513, 0, 131073, 917514, 0, 131073, 917515, 0, 131073, 917516, 0, 131073, 917517, 0, 131073, 917518, 0, 131073, 917519, 0, 131073, 917520, 0, 131073, 917521, 0, 131073, 917522, 0, 131074 )

[node name="Statue" parent="." instance=ExtResource( 7 )]
position = Vector2( -80, 32 )

[node name="Stairs" parent="." instance=ExtResource( 5 )]
position = Vector2( 696, -280 )
next_scene = ExtResource( 12 )

[node name="NPC" parent="." instance=ExtResource( 2 )]
position = Vector2( 200, 208 )

[node name="DialoguePlayer" parent="NPC" instance=ExtResource( 4 )]
dialogue_file = "res://dialogue/dialogue_data/level_3/npc_start.json"

[node name="Path2D" type="Path2D" parent="."]
position = Vector2( -24, 104 )
curve = SubResource( 1 )

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2( 35.3781, -8 )
rotation = 3.14159
offset = 4.63446
rotate = false
loop = false

[node name="NPC_after_power_up" parent="Path2D/PathFollow2D" instance=ExtResource( 2 )]
visible = false
position = Vector2( 3.37813, 0 )
rotation = 3.14159
deactivate = true

[node name="DialoguePlayer" parent="Path2D/PathFollow2D/NPC_after_power_up" instance=ExtResource( 4 )]
dialogue_file = "res://dialogue/dialogue_data/level_3/npc_after_fire_power.json"

[node name="boards" type="Node" parent="."]

[node name="Board" parent="boards" instance=ExtResource( 6 )]
position = Vector2( 328, 96 )

[node name="DialoguePlayer" parent="boards/Board" instance=ExtResource( 4 )]
dialogue_file = "res://dialogue/dialogue_data/level_3/board_1.json"

[node name="Board2" parent="boards" instance=ExtResource( 6 )]
position = Vector2( 408, 96 )

[node name="DialoguePlayer" parent="boards/Board2" instance=ExtResource( 4 )]
dialogue_file = "res://dialogue/dialogue_data/level_3/board_2.json"

[node name="Board3" parent="boards" instance=ExtResource( 6 )]
position = Vector2( 488, 96 )

[node name="DialoguePlayer" parent="boards/Board3" instance=ExtResource( 4 )]
dialogue_file = "res://dialogue/dialogue_data/level_3/board_3.json"

[node name="enemy_collisions" type="Node" parent="."]

[node name="EnemyCollision2" parent="enemy_collisions" instance=ExtResource( 9 )]
position = Vector2( 328, 40 )

[node name="EnemyCollision4" parent="enemy_collisions" instance=ExtResource( 9 )]
position = Vector2( 488, -176 )

[node name="enemies" type="Node" parent="."]

[node name="Enemy" parent="enemies" instance=ExtResource( 8 )]
position = Vector2( 40, 16 )

[node name="Enemy3" parent="enemies" instance=ExtResource( 8 )]
position = Vector2( 40, 144 )

[node name="Enemy4" parent="enemies" instance=ExtResource( 8 )]
position = Vector2( 192, 80 )

[node name="Enemy6" parent="enemies" instance=ExtResource( 8 )]
position = Vector2( 232, -56 )

[node name="Enemy8" parent="enemies" instance=ExtResource( 8 )]
position = Vector2( 352, -56 )

[node name="Enemy9" parent="enemies" instance=ExtResource( 8 )]
position = Vector2( 336, -168 )

[node name="Enemy10" parent="enemies" instance=ExtResource( 8 )]
position = Vector2( 568, -168 )

[node name="Enemy7" parent="enemies" instance=ExtResource( 8 )]
position = Vector2( 512, 56 )
is_moving = false

[node name="TutorialBox" parent="." instance=ExtResource( 11 )]

[node name="Skull" parent="." instance=ExtResource( 13 )]
position = Vector2( -53, 23 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( -72, 88 )
is_fire_use = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/LightShake = SubResource( 2 )
anims/Shake = SubResource( 3 )

[node name="StatueEffect" type="CanvasLayer" parent="."]

[node name="Sprite" type="Sprite" parent="StatueEffect"]
visible = false
position = Vector2( 240, 136 )
scale = Vector2( 0.238281, 272 )
texture = SubResource( 5 )
[connection signal="npc_walked" from="." to="." method="_on_Level3_npc_walked"]
[connection signal="player_use" from="Statue" to="." method="_on_Statue_player_use"]
[connection signal="dialogue_finished" from="Path2D/PathFollow2D/NPC_after_power_up/DialoguePlayer" to="." method="_on_DialoguePlayer_dialogue_finished"]
[connection signal="fire_used" from="Player" to="." method="_on_Player_fire_used"]

[editable path="Player"]
